correction z-index

--- a/src/app/pages/components/whatsapp-button/whatsapp-button.component.css
+++ b/src/app/pages/components/whatsapp-button/whatsapp-button.component.css
@@ -2,6 +2,7 @@
        position: fixed;
        right: 0px;
        bottom: 0px;
+       z-index: 20;
 }
 .design{
     background: none;
