--- a/src/app/pages/inicio/components/slide-inicio/slide-inicio.component.css
+++ b/src/app/pages/inicio/components/slide-inicio/slide-inicio.component.css
@@ -6,14 +6,16 @@
 
 .container__slider {
     position: relative;
+    z-index: 0;
     top: -80px;
     max-width: 100%;
-    height: 400px;
+    height: 600px;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 30px 10px;
+    padding-top: 100px;
     overflow: hidden;
 }
 
@@ -24,14 +26,14 @@
     height: 20px;
     background-color: rgba(0, 0, 0, .6);
     position: absolute;
-    top: 310px;
+    top: 426px;
     z-index: 2;
 }
 
 input[type=radio] {
     position: absolute;
     display: flex;
-    top: 313px;
+    top: 430px;
     margin: auto;
     z-index: 3;
     cursor: pointer;
